--- a/style.css
+++ b/style.css
@@ -56,6 +56,34 @@ button {
   background: yellow
 }
 
+#button5{
+  background:deepskyblue
+}
+#button5:active, #button5.lit{
+  background:dodgerblue
+}
+
+#button6{
+  background: IndianRed
+}
+#button6:active,#button6.lit{
+  background: Maroon
+}
+
+#button7{
+  background: Gold
+}
+#button7:active, #button7.lit{
+  background: GoldenRod
+}
+
+#button8{
+  background: OliveDrab
+}
+#button8:active, #button8.lit{
+  background: Green
+}
+
 
 #gameButtonArea > button {
   width:200px;
